compiler/acton/test/syntaxerrors/err30.act
# Tab/space mixing indentation error
def mixed_indent():
    x = 1
	y = 2  # This line starts with a tab